--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container">
         <div class="img-desp d-flex">
           <div class="my-image">
-            <img src="My photo.jpg" alt="Kowsik" />
+            <img src="My photo.jpg" alt="Kowsik photo" />
           </div>
           <div class="my-description">
             <h1 class="name">Hello!</h1>
