mob -> dsk view

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
           <div class="my-description">
             <h1 class="name">Hello!</h1>
             <h4 class="role">
-              I'm Kowsik, a junior software engineer in Superops.ai
+              I'm Kowsik, a junior software engineer in <span class="highlighter">SuperOps.ai</span>
             </h4>
           </div>
         </div>
       </div>
     </section>
 
-    <div id="about-id" class="divider container"></div>
+    <div id="about-id" class="divider"></div>
 
     <section>
       <div></div>
@@ -126,14 +126,14 @@
           </div>
         </div>
 
-        <div id="contact-id" class="divider container"></div>
+        <div id="contact-id" class="divider"></div>
 
         <div  class="skills">
           <h4>Contact</h4>
-          <div class="d-flex">
-            <a href="https://www.linkedin.com/in/kowsik-pirabhu-s-r-278598197" class="fa fa-3x fa-linkedin" target="_blank"> </a>  
-            <a href="https://twitter.com/KKowzy" class="fa fa-3x fa-twitter" target="_blank"></a>  
-            <a href="https://www.instagram.com/krazy_kowzy" class="fa fa-3x fa-instagram" target="_blank"> </a>  
+          <div class="contacts">
+            <a href="https://www.linkedin.com/in/kowsik-pirabhu-s-r-278598197" class="fa fa-2x fa-linkedin" target="_blank"> </a>  
+            <a href="https://twitter.com/KKowzy" class="fa fa-2x fa-twitter" target="_blank"></a>  
+            <a href="https://www.instagram.com/krazy_kowzy" class="fa fa-2x fa-instagram" target="_blank"> </a>  
           </div>
         </div>
 
