initial stage of animation

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section  class="about">
       <div class="container">
         <h3>About me</h3>
-        <div class="skills mt-20 d-flex half-border-top">
+        <div class="skills mt-20 d-flex inset-hover">
           <div class="description">
             <h4>Programming skills</h4>
             <p>
@@ -70,7 +70,7 @@
           </div>
         </div>
 
-        <div class="skills d-flex half-border-bottom">
+        <div class="skills d-flex inset-hover">
           <div class="description">
             <h4>Language known</h4>
             <p>
@@ -88,7 +88,7 @@
           </div>
         </div>
 
-        <div class="skills d-flex half-border-top">
+        <div class="skills d-flex inset-hover">
           <div class="description">
             <h4>Hobbies</h4>
             <p>
@@ -106,7 +106,7 @@
           </div>
         </div>
 
-        <div class="skills d-flex half-border-bottom">
+        <div class="skills d-flex inset-hover">
           <div class="description">
             <h4>Games</h4>
             <p>
