--- a/index.html
+++ b/index.html
@@ -1,148 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="abcd.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-    <title>Kowsik's portfolio</title>
-  </head>
-  <body>
-    <section id="header" class="navbar">
-      <div class="container">
-        <div class="name-nav d-flex">
-          <div class="name">
-            <h1>Kowsik Pirabhu S R</h1>
-          </div>
-          <div class="nav-btns d-flex">
-            <a href="#home-id">Home</a>
-            <a href="#about-id">About</a>
-            <a href="#contact-id">Contact</a>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="abcd.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <title>Kowsik's portfolio</title>
+</head>
+
+<body class="theme-dark">
+  <section id="header" class="navbar">
+    <div class="container">
+      <div class="name-nav d-flex">
+        <div class="name">
+          <h1>Kowsik Pirabhu S R</h1>
+        </div>
+        <div class="nav-btns d-flex">
+          <a href="#home-id">Home</a>
+          <a href="#about-id">About</a>
+          <a href="#contact-id">Contact</a>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="home-id" class="home">
-      <div class="container">
-        <div class="img-desp d-flex">
-          <div class="my-image">
-            <img src="https://ca.slack-edge.com/T0185EYKPRR-U026BASBQQP-5d5f311eefa2-512" alt="Kowsik" />
-          </div>
-          <div class="my-description">
-            <h1 class="name">Hello!</h1>
-            <h4 class="role">
-              I'm Kowsik, a junior software engineer in <span class="highlighter">SuperOps.ai</span>
-            </h4>
-          </div>
+  <section id="home-id" class="home">
+    <div class="container">
+      <div class="img-desp d-flex">
+        <div class="my-image">
+          <img src="https://ca.slack-edge.com/T0185EYKPRR-U026BASBQQP-5d5f311eefa2-512" alt="Kowsik" />
+        </div>
+        <div class="my-description">
+          <h1 class="name">Hello!</h1>
+          <h4 class="role">
+            I'm Kowsik, a junior software engineer in
+            <span class="highlighter">SuperOps.ai</span>
+          </h4>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <div id="about-id" class="divider"></div>
+  <div id="about-id" class="divider"></div>
 
-    <section>
-      <div></div>
-    </section>
-
-    <section  class="about">
-      <div class="container">
-        <h3>About me</h3>
-        <div class="skills mt-20 d-flex inset-hover">
-          <div class="description">
-            <h4>Programming skills</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur minima et reprehenderit voluptatum accusantium id
-              asperiores illo? Rerum quasi quidem alias nisi quod veritatis
-              amet, possimus laboriosam doloremque repellat qui!
-            </p>
-          </div>
-          <div class="content">
-            <ul>
-              <li>C</li>
-              <li>C++</li>
-              <li>Python</li>
-              <li>Html5</li>
-              <li>ReactJs</li>
-            </ul>
-          </div>
+  <section class="about">
+    <div class="container">
+      <h3>About me</h3>
+      <div class="skills mt-20 d-flex inset-hover">
+        <div class="description">
+          <h4>Programming skills</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consectetur minima et reprehenderit voluptatum accusantium id
+            asperiores illo? Rerum quasi quidem alias nisi quod veritatis
+            amet, possimus laboriosam doloremque repellat qui!
+          </p>
         </div>
-
-        <div class="skills d-flex inset-hover">
-          <div class="description">
-            <h4>Language known</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur minima et reprehenderit voluptatum accusantium id
-              asperiores illo? Rerum quasi quidem alias nisi quod veritatis
-              amet, possimus laboriosam doloremque repellat qui!
-            </p>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Tamil</li>
-              <li>English</li>
-            </ul>
-          </div>
+        <div class="content">
+          <ul>
+            <li>C</li>
+            <li>C++</li>
+            <li>Python</li>
+            <li>Html5</li>
+            <li>ReactJs</li>
+          </ul>
         </div>
-
-        <div class="skills d-flex inset-hover">
-          <div class="description">
-            <h4>Hobbies</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur minima et reprehenderit voluptatum accusantium id
-              asperiores illo? Rerum quasi quidem alias nisi quod veritatis
-              amet, possimus laboriosam doloremque repellat qui!
-            </p>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Solving Rubik's Cube</li>
-              <li>Exercise</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="skills d-flex inset-hover">
-          <div class="description">
-            <h4>Games</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur minima et reprehenderit voluptatum accusantium id
-              asperiores illo? Rerum quasi quidem alias nisi quod veritatis
-              amet, possimus laboriosam doloremque repellat qui!
-            </p>
-          </div>
-          <div class="content">
-            <ul>
-              <li>Badminton</li>
-              <li>Carrom pool</li>
-              <li>Snooker</li>
-              <li>Cricket</li>
-            </ul>
-          </div>
-        </div>
-
-        <div id="contact-id" class="divider"></div>
-
-        <div  class="skills">
-          <h4>Contact</h4>
-          <div class="contacts">
-            <a href="https://www.linkedin.com/in/kowsik-pirabhu-s-r-278598197" class="fa fa-2x fa-linkedin" target="_blank"> </a>  
-            <a href="https://twitter.com/KKowzy" class="fa fa-2x fa-twitter" target="_blank"></a>  
-            <a href="https://www.instagram.com/krazy_kowzy" class="fa fa-2x fa-instagram" target="_blank"> </a>  
-          </div>
-        </div>
-
-        <!-- <div>
-          <h4>Contact</h4>
-          <p><span>Phone number: </span>+91 6374361310</p>
-          <p><span>Email: </span>kowsikpirabhu@gmail.com</p>
-        </div> -->
       </div>
-    </section>
-  </body>
+
+      <div class="skills d-flex inset-hover">
+        <div class="description">
+          <h4>Language known</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consectetur minima et reprehenderit voluptatum accusantium id
+            asperiores illo? Rerum quasi quidem alias nisi quod veritatis
+            amet, possimus laboriosam doloremque repellat qui!
+          </p>
+        </div>
+        <div class="content">
+          <ul>
+            <li>Tamil</li>
+            <li>English</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="skills d-flex inset-hover">
+        <div class="description">
+          <h4>Hobbies</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consectetur minima et reprehenderit voluptatum accusantium id
+            asperiores illo? Rerum quasi quidem alias nisi quod veritatis
+            amet, possimus laboriosam doloremque repellat qui!
+          </p>
+        </div>
+        <div class="content">
+          <ul>
+            <li>Solving Rubik's Cube</li>
+            <li>Exercise</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="skills d-flex inset-hover">
+        <div class="description">
+          <h4>Games</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consectetur minima et reprehenderit voluptatum accusantium id
+            asperiores illo? Rerum quasi quidem alias nisi quod veritatis
+            amet, possimus laboriosam doloremque repellat qui!
+          </p>
+        </div>
+        <div class="content">
+          <ul>
+            <li>Badminton</li>
+            <li>Carrom pool</li>
+            <li>Snooker</li>
+            <li>Cricket</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div id="contact-id" class="divider"></div>
+
+  <section class="end-card">
+    <div class="container">
+      <h4>Contact</h4>
+      <div class="contacts d-flex">
+        <a href="https://www.linkedin.com/in/kowsik-pirabhu-s-r-278598197" class="fa fa-2x fa-linkedin" target="_blank">
+        </a>
+        <a href="https://twitter.com/KKowzy" class="fa fa-2x fa-twitter" target="_blank"></a>
+        <a href="https://www.instagram.com/krazy_kowzy" class="fa fa-2x fa-instagram" target="_blank">
+        </a>
+      </div>
+    </div>
+  </section>
+</body>
+
 </html>
